crates/cyrs-ast/tests/snapshots/snapshot__clause_with_where.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
expression: "dump(\"MATCH (n) WITH n WHERE n.age > 30 RETURN n\")"
---
SourceFile(SOURCE_FILE@0..42)
  STATEMENT@0..42
    MatchClause(MATCH_CLAUSE@0..9)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    WithClause(WITH_CLAUSE@9..33)
      WHITESPACE@9..10 " "
      WITH_KW@10..14 "WITH"
      RETURN_BODY@14..33
        RETURN_ITEMS@14..16
          ReturnItem(RETURN_ITEM@14..16)
            VAR_EXPR@14..16
              WHITESPACE@14..15 " "
              IDENT@15..16 "n"
        WhereClause(WHERE_CLAUSE@16..33)
          WHITESPACE@16..17 " "
          WHERE_KW@17..22 "WHERE"
          Expr::BinaryExpr(BINARY_EXPR@22..33)
            PROP_ACCESS_EXPR@22..28
              VAR_EXPR@22..24
                WHITESPACE@22..23 " "
                IDENT@23..24 "n"
              DOT@24..25 "."
              IDENT@25..28 "age"
            WHITESPACE@28..29 " "
            GT@29..30 ">"
            LITERAL_EXPR@30..33
              WHITESPACE@30..31 " "
              INT_LITERAL@31..33 "30"
    ReturnClause(RETURN_CLAUSE@33..42)
      WHITESPACE@33..34 " "
      RETURN_KW@34..40 "RETURN"
      RETURN_BODY@40..42
        RETURN_ITEMS@40..42
          ReturnItem(RETURN_ITEM@40..42)
            VAR_EXPR@40..42
              WHITESPACE@40..41 " "
              IDENT@41..42 "n"
