crates/cyrs-ast/tests/snapshots/snapshot__expr_binary_boolean_or.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
assertion_line: 385
expression: "dump(\"MATCH (n) WHERE n.age < 18 OR n.age > 65 RETURN n\")"
---
SourceFile(SOURCE_FILE@0..49)
  STATEMENT@0..49
    MatchClause(MATCH_CLAUSE@0..40)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..40)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        Expr::BinaryExpr(BINARY_EXPR@15..40)
          Expr::BinaryExpr(BINARY_EXPR@15..26)
            PROP_ACCESS_EXPR@15..21
              VAR_EXPR@15..17
                WHITESPACE@15..16 " "
                IDENT@16..17 "n"
              DOT@17..18 "."
              IDENT@18..21 "age"
            WHITESPACE@21..22 " "
            LT@22..23 "<"
            LITERAL_EXPR@23..26
              WHITESPACE@23..24 " "
              INT_LITERAL@24..26 "18"
          WHITESPACE@26..27 " "
          OR_KW@27..29 "OR"
          Expr::BinaryExpr(BINARY_EXPR@29..40)
            PROP_ACCESS_EXPR@29..35
              VAR_EXPR@29..31
                WHITESPACE@29..30 " "
                IDENT@30..31 "n"
              DOT@31..32 "."
              IDENT@32..35 "age"
            WHITESPACE@35..36 " "
            GT@36..37 ">"
            LITERAL_EXPR@37..40
              WHITESPACE@37..38 " "
              INT_LITERAL@38..40 "65"
    ReturnClause(RETURN_CLAUSE@40..49)
      WHITESPACE@40..41 " "
      RETURN_KW@41..47 "RETURN"
      RETURN_BODY@47..49
        RETURN_ITEMS@47..49
          ReturnItem(RETURN_ITEM@47..49)
            VAR_EXPR@47..49
              WHITESPACE@47..48 " "
              IDENT@48..49 "n"
