crates/cyrs-ast/tests/snapshots/snapshot__expr_is_not_null.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
assertion_line: 405
expression: "dump(\"MATCH (n) WHERE n.name IS NOT NULL RETURN n\")"
---
SourceFile(SOURCE_FILE@0..43)
  STATEMENT@0..43
    MatchClause(MATCH_CLAUSE@0..34)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..34)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        IS_NULL_EXPR@15..34
          PROP_ACCESS_EXPR@15..22
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
            DOT@17..18 "."
            IDENT@18..22 "name"
          WHITESPACE@22..23 " "
          IS_KW@23..25 "IS"
          WHITESPACE@25..26 " "
          NOT_KW@26..29 "NOT"
          WHITESPACE@29..30 " "
          NULL_KW@30..34 "NULL"
    ReturnClause(RETURN_CLAUSE@34..43)
      WHITESPACE@34..35 " "
      RETURN_KW@35..41 "RETURN"
      RETURN_BODY@41..43
        RETURN_ITEMS@41..43
          ReturnItem(RETURN_ITEM@41..43)
            VAR_EXPR@41..43
              WHITESPACE@41..42 " "
              IDENT@42..43 "n"
