crates/cyrs-ast/tests/snapshots/snapshot__expr_is_null.snap
---
source: crates/cyrs-ast/tests/snapshot.rs
assertion_line: 400
expression: "dump(\"MATCH (n) WHERE n.name IS NULL RETURN n\")"
---
SourceFile(SOURCE_FILE@0..39)
  STATEMENT@0..39
    MatchClause(MATCH_CLAUSE@0..30)
      MATCH_KW@0..5 "MATCH"
      Pattern(PATTERN@5..9)
        PATTERN_PART@5..9
          NodePattern(NODE_PATTERN@5..9)
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WhereClause(WHERE_CLAUSE@9..30)
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        IS_NULL_EXPR@15..30
          PROP_ACCESS_EXPR@15..22
            VAR_EXPR@15..17
              WHITESPACE@15..16 " "
              IDENT@16..17 "n"
            DOT@17..18 "."
            IDENT@18..22 "name"
          WHITESPACE@22..23 " "
          IS_KW@23..25 "IS"
          WHITESPACE@25..26 " "
          NULL_KW@26..30 "NULL"
    ReturnClause(RETURN_CLAUSE@30..39)
      WHITESPACE@30..31 " "
      RETURN_KW@31..37 "RETURN"
      RETURN_BODY@37..39
        RETURN_ITEMS@37..39
          ReturnItem(RETURN_ITEM@37..39)
            VAR_EXPR@37..39
              WHITESPACE@37..38 " "
              IDENT@38..39 "n"
